tests/types/errors/compound_bitwise_to_const.mog
#!strict
const total i32 = 7
total &= 3
